검색기능 추가/ 수정기능 추가

--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,8 +1,8 @@
-.serach {
+.inputStyle {
   display: flex;
 }
 
-.search input {
+.inputStyle input {
   padding-right: 10px;
   border: solid;
   border-radius: 10px;
