--- a/src/components/TodoListTemlpate.css
+++ b/src/components/TodoListTemlpate.css
@@ -5,7 +5,7 @@
   margin: 0 auto; /* 페이지 중앙 정렬 */
   margin-top: 4rem;
 }
-
+/* 
 .title {
   padding: 2rem;
   font-size: 2rem;
@@ -23,4 +23,4 @@
 
 .todos-wrapper {
   min-height: 5rem;
-}
+} */
